# hybrid

./: .gitignore  .gitmodules  Cargo.lock.remove  Cargo.toml  QUICK_FIXES.md  README.md  RVEMU_OPTIMIZATION_SOLUTION.md  RVEMU_PERFORMANCE_ANALYSIS.md  publish.sh  rust-toolchain.toml
.github/workflows/: release.yml
bins/cargo-hybrid/: Cargo.toml  README.md  build.rs
bins/cargo-hybrid/src/: command.rs  handlers.rs  main.rs  utils.rs
bins/dev-node/: Cargo.toml
bins/hybrid-bench/: BENCHMARK.md  CHANGELOG_RISCV.md  Cargo.toml  Makefile  README.md  RESULTS.md  RESULTS_SUMMARY.md  run_benchmarks.sh
bins/hybrid-bench/benches/: vm_comparison.rs
bins/hybrid-bench/contracts/cargo-hybrid/erc20-approval-transfer/: Cargo.toml
bins/hybrid-bench/contracts/cargo-hybrid/erc20-approval-transfer/src/: lib.rs
bins/hybrid-bench/contracts/cargo-hybrid/erc20-mint/: Cargo.toml  README.md
bins/hybrid-bench/contracts/cargo-hybrid/erc20-mint/.cargo/: config.toml
bins/hybrid-bench/contracts/cargo-hybrid/erc20-mint/src/: lib.rs
bins/hybrid-bench/contracts/cargo-hybrid/erc20-transfer/: Cargo.toml
bins/hybrid-bench/contracts/cargo-hybrid/erc20-transfer/src/: lib.rs
bins/hybrid-bench/contracts/cargo-hybrid/factorial/: Cargo.toml
bins/hybrid-bench/contracts/cargo-hybrid/factorial/src/: lib.rs
bins/hybrid-bench/contracts/cargo-hybrid/fibonacci/: Cargo.toml
bins/hybrid-bench/contracts/cargo-hybrid/fibonacci/src/: lib.rs
bins/hybrid-bench/contracts/cargo-hybrid/many-hashes/: Cargo.toml
bins/hybrid-bench/contracts/cargo-hybrid/many-hashes/src/: lib.rs
bins/hybrid-bench/src/: hybrid_vm_bench.rs  lib.rs  main.rs  revm_bench.rs  utils.rs
bins/hybrid-bench/src/assets/: BubbleSort.bin-runtime  ERC20ApprovalTransfer.bin-runtime  ERC20Mint.bin-runtime  ERC20Transfer.bin-runtime  Factorial.bin-runtime  FactorialRecursive.bin-runtime  Fibonacci.bin-runtime  FibonacciRecursive.bin-runtime  ManyHashes.bin-runtime  MstoreBench.bin-runtime  Push.bin-runtime  SstoreBench_no_opt.bin-runtime
bins/hybrid-bench/src/assets/cargo-hybrid/: ERC20ApprovalTransfer.bin.runtime  ERC20Mint.bin.runtime  ERC20Transfer.bin.runtime  Factorial.bin.runtime  Fibonacci.bin.runtime  ManyHashes.bin.runtime
bins/hybrid-node/: Cargo.toml  README.md
bins/hybrid-node/src/: command.rs  main.rs  pretty_print.rs
bins/mini-evm-interpreter/: Cargo.lock.remove  Cargo.lock.remove2  Cargo.toml  README.md
bins/mini-evm-interpreter/src/: ext_opcode.rs  ext_syscalls.rs  instruction_table.rs  lib.rs  main.rs  utils.rs
bins/node/: Cargo.toml
bins/node/src/: main.rs
book/: vocs.config.ts
book/docs/: styles.css
book/docs/pages/: index.md
book/docs/pages/developers/: installation.md  overview.md  quickstart.md
book/docs/pages/developers/examples/: erc20.md  storage.md
book/docs/pages/protocols/: overview.md
book/docs/pages/protocols/benchs/: performance-analysis.md  report.md  results.md
contracts/bare/: Cargo.toml
contracts/erc20/: Cargo.toml
contracts/erc20/.cargo/: config.toml
contracts/erc20/src/: lib.rs
contracts/storage/: Cargo.toml
contracts/storage/src/: lib.rs
contracts/storage2/: Cargo.toml
crates/: ARCHITECTURE.md
crates/compile/: Cargo.toml  README.md
crates/compile/src/: deployables.rs  lib.rs  utils.rs
crates/hybrid-compile/: API.md  Cargo.toml  README.md
crates/hybrid-compile/src/: lib.rs  primitives.rs  utils.rs
crates/hybrid-contract/: Cargo.toml
crates/hybrid-contract/src/: allocator.rs  call.rs  create.rs  error.rs  lib.rs  log.rs  tx.rs
crates/hybrid-contract/src/env/: block.rs  mod.rs
crates/hybrid-contract/src/hstd/: mapping.rs  mod.rs  slot.rs
crates/hybrid-derive/: Cargo.toml  README.md
crates/hybrid-derive/docs/: api.md  examples.md
crates/hybrid-derive/src/: helpers.rs  lib.rs
crates/hybrid-ethereum/: Cargo.toml
crates/hybrid-ethereum/src/: constants.rs  executor.rs  factory.rs  lib.rs  payload_builder.rs
crates/hybrid-evm/: Cargo.toml
crates/hybrid-evm/src/: evm.rs  handler.rs  riscv_execute.rs
crates/hybrid-evm/src/execution/: mod.rs
crates/hybrid-evm/src/frame/: mod.rs
crates/hybrid-primitives/: Cargo.toml
crates/hybrid-primitives/src/: lib.rs  mini_interpreter.rs
crates/hybrid-syscalls/: Cargo.toml  README.md
crates/hybrid-syscalls/docs/: usage.md
crates/hybrid-syscalls/src/: error.rs  lib.rs
crates/hybrid-systems/: Cargo.toml
crates/hybrid-systems/src/: lib.rs
crates/hybrid-systems/src/env/: block.rs  msg.rs
crates/hybrid-vm/: Cargo.toml  mini-evm-interpreter  mini-interpreter
crates/hybrid-vm/src/: api.rs  eth_hybrid.rs  evm.rs  frame.rs  handler.rs  hybrid_execute.rs  lib.rs  mini_evm.rs  mini_evm_coding.rs  utils.rs
crates/hybrid-vm/src/execution/: helper.rs  mod.rs  utils.rs
crates/hybrid-vm/src/setup/: error.rs  mod.rs
crates/hybrid_evm/: Cargo.toml
crates/hybrid_evm/src/: api.rs  eth_hybrid_evm.rs  evm.rs  frame.rs  handler.rs  lib.rs  riscv_execute.rs
crates/hybrid_evm/src/execution/: gas.rs  helper.rs  mod.rs
crates/hybrid_evm/src/frame/: mod.rs
crates/rv64-emu/: Cargo.toml
crates/rv64-emu/src/: bus.rs  cpu.rs  dtb.rs  emu.rs  exception.rs  interrupt.rs  lib.rs  mem.rs  reg.rs  rom.rs
crates/rv64-emu/src/cpu/: compressed_exec.rs  general_exec.rs  mod.rs
crates/rv64-emu/src/devices/: clint.rs  mod.rs  plic.rs  uart_cli.rs  virtio_blk.rs
crates/rv64-emu/src/primitives/: constants.rs  mod.rs
crates/rv64-emu/src/reg/: csr.rs  f_reg.rs  i_reg.rs  mod.rs
crates/rv64-emu/tests/: exception.rs  helper.rs  rv32d.rs  rv32f.rs  rv32i.rs  rv64_user_p.rs
crates/rvemu/: Cargo.toml  README.md
crates/rvemu/src/: bus.rs  cpu.rs  emulator.rs  exception.rs
crates/rvemu/src/devices/: virtio_blk.rs
crates/rvemu/tests/: rv32i.rs
crates/vm/: Cargo.toml
crates/vm/src/: constants.rs  executor.rs  factory.rs  lib.rs  payload_builder.rs
crates/vm/src/hybrid_evm/: api.rs  evm.rs  handler.rs  mod.rs
examples/hybrid-erc20/: Cargo.toml  README.md
hybrid_evm/: Cargo.toml
hybrid_evm/src/: evm.rs  lib.rs
my-hybrid-contract/: Cargo.toml
scripts/: install-with-release.sh  install.sh
(+11 files in other folders)
