[workspace]
members = ["crates/hybrid-syscalls", "crates/rvemu"]

exclude = ["crates/hybrid-contract"]


[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Developer Uche <developeruche@gmail.com>"]
categories = ["compilers"]
keywords = ["revm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/developeruche/hybrid"
documentation = "https://github.com/developeruche/hybrid"
homepage = "https://github.com/developeruche/hybrid"
edition = "2021"


[workspace.dependencies]
