[workspace]
members = [ "crates/hybrid-compile", "crates/hybrid-ethereum","crates/hybrid-syscalls", "crates/hybrid-vm", "crates/rvemu"]

exclude = ["crates/hybrid-contract", "crates/hybrid-derive", "contracts/*"]


[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Developer Uche <developeruche@gmail.com>"]
categories = ["compilers"]
keywords = ["revm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/developeruche/hybrid"
documentation = "https://github.com/developeruche/hybrid"
homepage = "https://github.com/developeruche/hybrid"
edition = "2021"


[workspace.dependencies]
# hybrid
hybrid-syscalls = { path = "crates/hybrid-syscalls" }
hybrid-vm = { path = "crates/hybrid-vm" }

# rvemu
rvemu = { path = "crates/rvemu" }

# error
eyre = "0.6.12"
thiserror = "2.0.3"

#reth 
reth = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12"}
reth-ethereum = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12" }
reth-tracing = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12" }
reth-ethereum-payload-builder = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12" }


#alloy
alloy-evm = { version = "0.5.0", default-features = false }
alloy-genesis = { version = "0.14.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false, features = ["map-foldhash"] }

#revm
revm = { version = "22.0.1", default-features = false }

# tracing (log)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
anyhow = "1.0.98"
indicatif = "0.17"
colored = "2.1"
