[workspace]
members = [ 
    "bins/cargo-hybrid", 
    "bins/hybrid-node", 
    "crates/hybrid-compile", 
    "crates/hybrid-ethereum", "crates/hybrid-primitives",
    "crates/hybrid-syscalls", 
    "crates/hybrid-vm", 
    "crates/rvemu"]

exclude = [
    "crates/hybrid-contract", 
    "crates/hybrid-derive", 
    "contracts/*",
    "bins/mini-evm-interpreter"]


[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Developer Uche <developeruche@gmail.com>"]
categories = ["compilers"]
keywords = ["revm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/developeruche/hybrid"
documentation = "https://github.com/developeruche/hybrid"
homepage = "https://github.com/developeruche/hybrid"
edition = "2021"


[workspace.dependencies]
# hybrid
hybrid-syscalls = { path = "crates/hybrid-syscalls" }
hybrid-vm = { path = "crates/hybrid-vm" }
hybrid-compile = { path = "crates/hybrid-compile" }
hybrid-ethereum = { path = "crates/hybrid-ethereum" }
hybrid-contract = { path = "crates/hybrid-contract" }
hybrid-primitives = { path = "crates/hybrid-primitives" }

# rvemu
rvemu = { path = "crates/rvemu" }

# error
eyre = "0.6.12"
thiserror = "2.0.3"
anyhow = "1.0.98"

#reth 
reth = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12" }
reth-ethereum = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12" }
reth-tracing = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12" }
reth-ethereum-payload-builder = { git = "https://github.com/developeruche/reth.git", rev = "54ed1ac9dc087b909e346ba2855935edee7c5764", version = "1.3.12" }


#alloy
alloy-evm = { version = "0.5.0", default-features = false }
alloy-genesis = { version = "0.14.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false, features = ["map-foldhash"] }

#revm
revm = { git = "https://github.com/developeruche/revm.git", default-features = false, branch = "hybrid-revm-v2", features = ["serde"]}

# tracing (log)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# serde 
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0.143", default-features = false, features = ["alloc"] }

# misc
indicatif = "0.17"
colored = "2.1"
bincode = "1.3"

