[package]
name = "cargo-hybrid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
indicatif.workspace = true
colored.workspace = true
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
compile = { path = "../../crates/compile" }
fs_extra = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.8"
toml_edit = "0.22.26"
tokio = { version = "1.28", features = ["full"] }
alloy = { version = "1.0.6", features = [
    "eips",
    "full",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }