[package]
name = "hybrid-node"
description = "A Ethereum node executing RUST and Solidity smart contract"
version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
hybrid-ethereum.workspace = true
tokio = { version = "1.45", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = { workspace = true }
alloy = { version = "1.0.6", features = [
    "eips",
    "full",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }