[package]
name = "mini-evm-interpreter"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []
deploy = []
interface-only = []

[dependencies]
hybrid-derive = { path = "../../crates/hybrid-derive"}
hybrid-contract = { path = "../../crates/hybrid-contract"}

alloy-core = { version = "0.8.20", default-features = false }
alloy-sol-types = { version = "0.8.20", default-features = false }

revm = { git = "https://github.com/developeruche/revm.git", default-features = false, branch = "hybrid-revm-v1", features = ["serde"]}
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0.143", default-features = false, features = ["alloc"] }

bincode = { version = "2.0", features = ["serde"], default-features = false }

[[bin]]
name = "runtime"
path = "src/lib.rs"

[[bin]]
name = "deploy"
path = "src/lib.rs"
required-features = ["deploy"]

[profile.release]
lto = true
opt-level = "z"
