[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
vm = { path = "../../crates/vm" }
tokio = { version = "1.45", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = { workspace = true }