[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []
deploy = []
interface-only = []

[dependencies]
# r55
contract-derive = { git = "https://github.com/r55-eth/r55.git", branch = "main"}
eth-riscv-runtime = { git = "https://github.com/r55-eth/r55.git", branch = "main" }

# alloy
alloy-core = { version = "0.8.20", default-features = false }
alloy-sol-types = { version = "0.8.20", default-features = false }

[[bin]]
name = "runtime"
path = "src/lib.rs"

[[bin]]
name = "deploy"
path = "src/lib.rs"
required-features = ["deploy"]

[profile.release]
lto = true
opt-level = "z"
