[package]
name = "hybrid-compile"
version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
indicatif.workspace = true
colored.workspace = true

toml = "0.8"
syn = { version = "1.0", features = ["full"] }