[package]
name = "hybrid-contract"
version = "0.1.0"
license = "MIT"
authors = ["Developer Uche <developeruche@gmail.com>"]
categories = ["compilers"]
keywords = ["revm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/developeruche/hybrid"
documentation = "https://github.com/developeruche/hybrid"
homepage = "https://github.com/developeruche/hybrid"
edition = "2021"

[dependencies]
alloy-core = { version = "0.8.20", default-features = false }
alloy-sol-types = { version = "0.8.20", default-features = false }
hybrid-syscalls = { path = "../hybrid-syscalls" }
riscv-rt = "0.12.2"