[package]
name = "hybrid-contract"
version = "0.1.0"
license = "MIT"
authors = ["Developer Uche <developeruche@gmail.com>"]
description = "A comprehensive smart contract development library for Hybrid VM with Solidity-like abstractions"
categories = ["development-tools", "cryptography", "embedded", "no-std", "wasm"]
keywords = ["smart-contracts", "blockchain", "ethereum", "risc-v", "no_std"]
repository = "https://github.com/developeruche/hybrid"
documentation = "https://docs.rs/hybrid-contract"
homepage = "https://github.com/developeruche/hybrid"
readme = "README.md"
edition = "2021"
rust-version = "1.70"

[dependencies]
alloy-core = { version = "0.8.20", default-features = false }
alloy-sol-types = { version = "0.8.20", default-features = false }
hybrid-syscalls = { path = "../hybrid-syscalls" }
riscv-rt = "0.12.2"
