[package]
name = "hybrid-ethereum"
version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
reth.workspace = true
reth-ethereum = { workspace = true, features = ["test-utils", "node", "evm"] }
reth-tracing.workspace = true
reth-ethereum-payload-builder.workspace = true

alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true


anyhow.workspace = true
eyre.workspace = true

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

hybrid-vm.workspace = true