[package]
name = "hybrid-primitives"
version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
reth.workspace = true
