[package]
name = "hybrid-syscalls"
version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
thiserror-no-std = "2.0.2"