[package]
name = "hybrid-vm"
version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
reth.workspace = true
alloy-evm.workspace = true
hybrid-syscalls.workspace = true
goblin = { version = "0.8.2", features = ["std"] }
rvemu.workspace = true
thiserror.workspace = true
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

