[package]
name = "hybrid_evm"
version = "0.1.0"
edition = "2024"

[dependencies]
reth.workspace = true
alloy-evm.workspace = true
eth-riscv-interpreter = { git = "https://github.com/r55-eth/r55.git", branch = "main" }
eth-riscv-syscalls = { git = "https://github.com/r55-eth/r55.git", branch = "main" }
rvemu = { git="https://github.com/r55-eth/rvemu.git"}
