[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
reth.workspace = true
reth-ethereum = { workspace = true, features = ["test-utils", "node", "evm", "pool"] }
reth-tracing.workspace = true
alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
eyre.workspace = true