[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
reth.workspace = true
reth-ethereum = { workspace = true, features = ["test-utils", "node", "evm"] }
reth-tracing.workspace = true
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "6f8e7258f4733279080e4bd8345ce50538a40d6e" }


alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true


anyhow.workspace = true
eyre.workspace = true
