[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
reth.workspace = true
reth-ethereum = { workspace = true, features = ["test-utils", "node", "evm"] }
reth-tracing.workspace = true
reth-ethereum-payload-builder.workspace = true

alloy-evm.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true


anyhow.workspace = true
eyre.workspace = true

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

hybrid_evm = { path = "../hybrid_evm"}